--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -12,6 +12,7 @@
   href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css"
 />
 
+
 <!-- my-navbar -->
 <div class="my-navbar" *ngIf="isLoggedIn$ | async as isLoggedIn">
   <div class="my-navbar-header">
@@ -22,6 +23,10 @@
       matTooltipPosition="right"
     />
   </div>
+
+  <!-- <a class="a-my-navbar" (click)="onLogout()">
+    <i class="bi bi-box-arrow-left i-my-navbar"></i>
+  </a> -->
 
   <div class="partialsContainer">
     <ul class="ul-my-navbar">
