--- a/src/app/partials/messenger/messenger.component.html
+++ b/src/app/partials/messenger/messenger.component.html
@@ -375,7 +375,7 @@
                       <h6 class="width-100" id="{{ i }}">{{ log.fullname }}</h6>
                     </div>
                     <h6 class="width-100 not-bold" id="{{ i }}">
-                      {{ this.DataService.formatPhoneNumber(log.phonenumber) }}
+                      {{ this.DataService.formatPhoneNumber(log['Phone Number']) }}
                     </h6>
                     <hr class="margin-rt" />
                   </div>
